--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,13 +5,12 @@ networks:
     driver: bridge
 
 services:
-  # database
   postgres:
     image: postgres:15.1
     environment:
       POSTGRES_DB: oms
       POSTGRES_USER: postgres
-      POSTGRES_PASSWORD:  ${POSTGRES_PASSWORD}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       PGDATA: "/var/lib/postgresql/data/pgdata"
     container_name: 'postgres-container'
     volumes:
@@ -19,7 +18,7 @@ services:
     ports:
       - 5432:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U user -d oms"]
+      test: ["CMD-SHELL", "pg_isready -U postgres -d oms"]
       interval: 10s
       timeout: 5s
       retries: 5
@@ -31,7 +30,7 @@ services:
           memory: 4G
     networks:
       - net
-  # service
+
   app:
     build:
       context: .
@@ -46,13 +45,34 @@ services:
     restart: unless-stopped
     hostname: server
     environment:
-      DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@localhost:5432/oms # должно быть в секретах/конфиге. Учебный пример
+      DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@postgres:5432/oms
     ports:
       - 8080:8080
-      # - 8090:8090
     command: ./app
     depends_on:
-      - postgres
+      postgres:
+        condition: service_healthy
     networks:
       - net
 
+  test:
+    build:
+      context: .
+      dockerfile: Dockerfile
+    container_name: 'test-container'
+    restart: unless-stopped
+    environment:
+      POSTGRES_DB: oms
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      PGDATA: "/var/lib/postgresql/data/pgdata"
+      DATABASE_URL: postgres://postgres:${POSTGRES_PASSWORD}@postgres:5432/oms
+    depends_on:
+      postgres:
+        condition: service_healthy
+    volumes:
+      - .:/var/lib/postgresql/data
+      - ./config.yaml:/config.yaml
+    networks:
+      - net
+    command: ["sh", "-c", "sleep 20 && go test ./tests/integration_tests -v && while :; do sleep 1; done"] # Command to run tests
